--- a/index.html
+++ b/index.html
@@ -13,18 +13,18 @@
           <br>
           <th><img src="images/logo.png" alt="" class="logo"></th>
           <th>
-            <form class="left" action="index.html" method="post">
-              <input type="submit" name="" value="ABOUT">
+            <form action="index.html" method="post">
+              <input class="left" type="submit" name="" value="ABOUT">
             </form>
           </th>
           <th>
-            <form class="center" action="index.html" method="post">
-              <input type="submit" name="" value="WEBSITES MADE" style="width: 150px; height: 40px;">
+            <form action="index.html" method="post">
+              <input class="center" type="submit" name="" value="WEBSITES MADE">
             </form>
           </th>
           <th>
-            <form class="right" action="index.html" method="post">
-              <input type="submit" name="" value="BLOG">
+            <form action="index.html" method="post">
+              <input  class="right" type="submit" name="" value="BLOG">
             </form>
             </th>
         </thead>
