--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TEST</title>
+    <title>Tarun's Site</title>
     <link rel="stylesheet" href="css/test.css">
     <link rel="icon" href="images/logo.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
   <body>
     <div class="top">
