--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Tarun's Site</title>
+    <title>TEST</title>
     <link rel="stylesheet" href="css/test.css">
     <link rel="icon" href="images/logo.ico">
   </head>
@@ -37,7 +37,7 @@
      <br>
      <br>
      <br>
-       <img src="images/land.svg" alt="">
+       <img src="images/land.svg" class="landimage" alt="">
     </div>
     <div class="about">
       <center>
