--- a/index.html
+++ b/index.html
@@ -8,36 +8,15 @@
   </head>
   <body>
     <div class="top">
-      <table>
-        <thead>
-          <br>
-          <th><img src="images/logo.png" alt="" class="logo"></th>
-          <th>
-            <form action="index.html" method="post">
-              <input class="left" type="submit" name="" value="ABOUT">
-            </form>
-          </th>
-          <th>
-            <form action="index.html" method="post">
-              <input class="center" type="submit" name="" value="WEBSITES MADE">
-            </form>
-          </th>
-          <th>
-            <form action="index.html" method="post">
-              <input  class="right" type="submit" name="" value="BLOG">
-            </form>
-            </th>
-        </thead>
-      </table>
-    </div>
-    <div class="second">
+      <img src="images/logo.png" class="logo" alt="">
+      <a href="index.html" class="left">ABOUT</a>
+      <a href="#" class="center">WEBSITES</a>
+      <a href="#" class="right">BLOG</a>
       <br>
-     <img src="images/name.png" class="title" alt="">
-     <p class="subtitle">A web devloper</p>
-     <br>
-     <br>
-     <br>
-       <img src="images/land.svg" class="landimage" alt="">
+      <img src="images/name.png" class="title" alt="">
+      <p class="subtitle">A WEB DESGINER</p>
+      <br>
+      <img src="images/land.svg" class="landimage" alt="">
     </div>
     <div class="about">
       <center>
