--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>TEST</title>
+    <title>Tarun's personal site</title>
     <link rel="stylesheet" href="css/test.css">
     <link rel="icon" href="images/logo.ico">
   </head>
